welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:3: error: '=' expected but ';' found.
for (compteur <- 1 to x) { 
^