welcome.lessons.welcome.loopfor.LoopFor.scala.code
var x
for (compteur <- 1 to x) { 
    if(!estSurBiscuit) {
    	avance();
    }
 }
 prendBiscuit
for (compteur <- 1 to 10) {
	recule();
}
